--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2856,6 +2856,9 @@ html, body {
 @media (min-width: 1025px) {
   .game-screen--desktop-split {
     flex-direction: row;
+    padding-top: 68px;
+    height: 100vh;
+    box-sizing: border-box;
   }
 
   /* World takes 70% on desktop, right panel takes 30% */
@@ -2864,8 +2867,7 @@ html, body {
     max-width: 70% !important;
     flex: 0 0 70% !important;
     overflow: hidden;
-    margin-top: 68px;
-    height: calc(100vh - 68px);
+    height: 100%;
   }
 
   /* Right panel overlays on top of world */
@@ -2873,9 +2875,8 @@ html, body {
     width: 30% !important;
     max-width: 30% !important;
     flex: 0 0 30% !important;
-    height: calc(100vh - 68px);
-    max-height: calc(100vh - 68px);
-    margin-top: 68px;
+    height: 100%;
+    max-height: 100%;
     display: flex;
     flex-direction: column;
     align-items: stretch;
